# min-devkit

./: .gitignore  .gitmodules  CMakeLists.txt  conanfile.py
docs/: phasor_1d1.xtal~.maxref.xml  phi_2d1.xtal~.maxref.xml  xtal.phasor~.maxref.xml
source/projects/min.beat.random/: CMakeLists.txt
source/projects/min.environment/: CMakeLists.txt
source/projects/min.markdown/: CMakeLists.txt
source/projects/min.meter_tilde/: CMakeLists.txt
source/projects/min.multitouch/: CMakeLists.txt
source/projects/min.pan_tilde/: CMakeLists.txt
source/projects/min.project/: CMakeLists.txt
source/projects/min.stress_tilde/: CMakeLists.txt
source/projects/phi_1d1.xtal_tilde/: CMakeLists.txt  phi_1d1.xtal_tilde.cpp  phi_1d1.xtal_tilde_test.cpp
source/projects/phi_2d1.xtal_tilde/: CMakeLists.txt  phi_2d1.xtal_tilde.cpp  phi_2d1.xtal_tilde_test.cpp
